# roasted

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yaml
docs/: design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: libroasted.rs
libroasted/: Cargo.toml
libroasted/src/: account.rs  amount.rs  ledger.pest  ledger.rs  lib.rs  parser.rs  statement.rs  transaction.rs
src/: account.rs  amount.rs  ledger.pest  ledger.rs  lib.rs  parser.rs  statement.rs  transaction.rs
typca/: Cargo.toml
xtask/: Cargo.toml
