[package]
name = "roasted"
version = "0.1.0"
authors = ["Nurahmadie <177826+fudanchii@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
pest = { git = "https://github.com/pest-parser/pest" }
pest_meta = { git = "https://github.com/pest-parser/pest" }
pest_derive = { git = "https://github.com/pest-parser/pest" }
pest_bootstrap = { git = "https://github.com/pest-parser/pest" }
