[package]
name = "libroasted-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.libroasted]
path = "../libroasted"

[[bin]]
name = "libroasted"
path = "fuzz_targets/libroasted.rs"
test = false
doc = false
bench = false

[workspace]
# empty
