[package]
name = "libroasted"
version = "0.1.0"
authors = ["Nurahmadie <177826+fudanchii@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
pest = "2.1.3"
pest_derive = "2.1.0"
camelpaste = "0.1"
indexmap = "2.6.0"
